--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -18,11 +18,12 @@ nav {
 
     & .logo {
       //   background-color: yellow;
-
+      justify-self: start;
+      padding-left: 20px;
       & img {
         width: 180px;
-        padding-right: 1rem;
-        padding-left: 1rem;
+        // padding-right: 1rem;
+        // padding-left: 1rem;
       }
     }
 
