--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -1,8 +1,13 @@
 nav {
   //   height: 200px;
-  //   background-color: rebeccapurple;
-  //   position: sticky;
+  background-color: white;
+  position: fixed;
   padding-top: 5px;
+  z-index: 99;
+  // padding-right: 0px;
+  width: 100%;
+  // margin-right: 0px;
+  // margin-bottom: 50px;
   & .contain100 {
     // background-color: red;
     height: 50px;
@@ -21,7 +26,7 @@ nav {
       justify-self: start;
       padding-left: 20px;
       & img {
-        width: 180px;
+        width: 160px;
         // padding-right: 1rem;
         // padding-left: 1rem;
       }
@@ -33,6 +38,7 @@ nav {
 
       & ul {
         height: 100%;
+        width: 100%;
       }
 
       & .flex {
@@ -42,7 +48,7 @@ nav {
 
       &_itmes {
         // box-sizing: content-box;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         // padding-right: 0.6rem;
         // padding-left: 0.6rem;
         text-align: center;
@@ -50,7 +56,7 @@ nav {
         padding-right: auto;
         padding-top: 0.6rem;
         padding-bottom: 0.6rem;
-        width: 100px;
+        width: 95px;
 
         &:hover {
           border-bottom: greenyellow solid 2px;
